buildscript {
    repositories {
        maven {
            url = "https://maven.minecraftforge.net/"
        }
        maven {
            url = "https://libraries.minecraft.net/"
        }
        maven {
            url = "https://plugins.gradle.org/m2/"
        }
        maven {
            url = "https://repo.spongepowered.org/maven/"
        }
        maven {
            url = "https://maven.parchmentmc.org/"
        }
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true
        classpath "org.spongepowered:mixingradle:0.7-SNAPSHOT"
        classpath "org.parchmentmc:librarian:1.+"
    }
}

apply plugin: "net.minecraftforge.gradle"
apply plugin: "org.parchmentmc.librarian.forgegradle"
apply plugin: "org.spongepowered.mixin"
apply plugin: "eclipse"
apply plugin: "maven-publish"

repositories {
    jcenter()
    mavenCentral()
    flatDir {
        dirs "libs"
    }
    maven {
        url = "https://libraries.minecraft.net/"
    }
    maven {
        url = "https://maven.minecraftforge.net/"
    }
    maven {
        url = "https://repo.spongepowered.org/maven"
    }
    maven {
        url = "https://dvs1.progwml6.com/files/maven/"
        content {
            includeGroup "mezz.jei"
            includeGroup "slimeknights.mantle"
            includeGroup "slimeknights.tconstruct"
        }
    }
    maven {
        url = "https://maven.blamejared.com/"
        content {
            includeGroup "blusunrize.immersiveengineering"
            includeGroup "com.blamejared.crafttweaker"
            includeGroup "net.darkhax.openloader"
            includeGroup "vazkii.patchouli"
        }
    }
    maven {
        url = "https://maven.theillusivec4.top/"
        content {
            includeGroup "top.theillusivec4.curios"
        }
    }
    maven {
        url = "https://maven.architectury.dev/"
        content {
            includeGroup "dev.architectury"
        }
    }
    maven {
        url = "https://maven.saps.dev/releases/"
        content {
            includeGroup "dev.ftb.mods"
            includeGroup "dev.latvian.mods"
        }
    }
    maven {
        url = "https://maven.tterrag.com/"
        content {
            includeGroup "com.simibubi.create"
        }
    }
    maven {
        url = "https://dl.cloudsmith.io/public/geckolib3/geckolib/maven/"
        content {
            includeGroup "software.bernie.geckolib"
        }
    }
    maven {
        url = "https://maven.covers1624.net/"
        content {
            includeGroup "com.teamcofh"
        }
    }
    maven {
        url = "https://pkgs.dev.azure.com/Kotori316/minecraft/_packaging/mods/maven/v1/"
        content {
            includeGroup "com.kotori316"
        }
    }
    maven {
        url = "https://jenkins.bdew.net/maven/"
        content {
            includeGroup "net.bdew"
        }
    }
    maven {
        url = "https://repo.repsy.io/mvn/klikli-dev/mods/"
        content {
            includeGroup "com.klikli_dev"
        }
    }
    maven {
        url = "https://jitpack.io/"
    }
    maven {
        url = "https://cursemaven.com/"
        content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url = "https://modmaven.dev/"
    }
}

sourceSets {
    main
}

version = "4.3.2.3"
group = "thelm.jaopca"
archivesBaseName = "JAOPCA-1.19.3"

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: "parchment", version: "2022.12.18-1.19.3"
    runs {
        client = {
            properties "forge.logging.markers": "SCAN,REGISTRIES,REGISTRYDUMP"
            properties "forge.logging.console.level": "debug"
            properties "mixin.env.remapRefMap": "true"
            properties "mixin.env.refMapRemappingFile": "${projectDir}/build/createSrgToMcp/output.srg".toString()
            workingDirectory project.file("run")
            source sourceSets.main
        }
        server = {
            properties "forge.logging.markers": "SCAN,REGISTRIES,REGISTRYDUMP"
            properties "forge.logging.console.level": "debug"
            properties "mixin.env.remapRefMap": "true"
            properties "mixin.env.refMapRemappingFile": "${projectDir}/build/createSrgToMcp/output.srg".toString()
            workingDirectory project.file("run")
            source sourceSets.main
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:1.19.3-44.1.17"
    annotationProcessor "org.spongepowered:mixin:0.8.4:processor"

    implementation fg.deobf("mezz.jei:jei-1.19.3-forge:12.2.0.16")
    //implementation fg.deobf("com.blamejared.crafttweaker:CraftTweaker-forge-1.19.2:10.0.29")
    implementation fg.deobf("top.theillusivec4.curios:curios-forge:1.19.3-5.1.3.1")
    implementation fg.deobf("software.bernie.geckolib:geckolib-forge-1.19.3:4.0.3")
    implementation fg.deobf("vazkii.patchouli:Patchouli:1.19.3-78")
    //implementation fg.deobf("slimeknights.mantle:Mantle:1.19-1.10.+")
    //implementation fg.deobf("com.teamcofh:cofh_core:1.19.2-10.0.2.33")
    //implementation fg.deobf("com.teamcofh:thermal_core:1.19.2-10.0.0.1")
    //implementation fg.deobf("dev.latvian.mods:rhino-forge:1902.2.2-build.264")
    implementation fg.deobf("dev.architectury:architectury-forge:7.1.70")
    //implementation fg.deobf("dev.ftb.mods:ftb-library-forge:1902.3.11-build.166") {
    //    transitive = false
    //}
    implementation("com.kotori316:scalablecatsforce:2.13.10-build-15:with-library") {
        transitive = false
    }
    implementation fg.deobf("com.klikli_dev:modonomicon:1.19.3-1.25.0")
    //implementation fg.deobf("dev.latvian.mods:kubejs-forge:1902.6.0-build.140") {
    //    transitive = false
    //}
    implementation fg.deobf("net.darkhax.openloader:OpenLoader-Forge-1.19.3:16.0.1")
    implementation fg.deobf("blusunrize.immersiveengineering:ImmersiveEngineering:1.19.3-9.2.0-160")
    //implementation fg.deobf("com.simibubi.create:create-1.19.2:0.5.0.h-21:all")
    //implementation fg.deobf("slimeknights.tconstruct:TConstruct:1.19-3.6.+")
    //implementation fg.deobf("mekanism:Mekanism:1.19.2-10.3.5.474")
    //implementation fg.deobf("mekanism:Mekanism:1.19.2-10.3.5.474:generators")
    //implementation fg.deobf("dev.ftb.mods:ftb-industrial-contraptions:1900.1.7-build.212") {
    //    transitive = false
    //}
    //implementation fg.deobf("com.teamcofh:thermal_foundation:1.19.2-10.0.0.38")
    //implementation fg.deobf("com.teamcofh:thermal_expansion:1.19.2-10.0.0.19")
    //implementation fg.deobf("com.teamcofh:thermal_integration:1.19.2-10.0.0.11")
    //implementation fg.deobf("redsnakegames.mcenderdragon:futurepack:1.19-34.+")

    //JitPack

    //CurseMaven
    implementation fg.deobf("curse.maven:shutup-experimental-settings-407174:3759881")
    //implementation fg.deobf("curse.maven:ato-405593:4046926")
    //implementation fg.deobf("curse.maven:allthemodium-364466:4312377")
    //implementation fg.deobf("curse.maven:electrodynamics-316867:4086209")
    implementation fg.deobf("curse.maven:voluminous-energy-416704:4361714")
    implementation fg.deobf("curse.maven:cyclops-core-232758:4392602")
    implementation fg.deobf("curse.maven:common-capabilities-247007:4391468")
    implementation fg.deobf("curse.maven:integrated-dynamics-236307:4391535")
    //implementation fg.deobf("curse.maven:essentials-293752:4028458")
    //implementation fg.deobf("curse.maven:crossroads-mc-250231:4127949")
    //implementation fg.deobf("curse.maven:assemblylinemachines-388282:3964948")
    implementation fg.deobf("curse.maven:smartbrainlib-661293:4312180")
    implementation fg.deobf("curse.maven:occultism-361026:4402691")
    //implementation fg.deobf("curse.maven:cyclic-239286:4075141")
    //implementation fg.deobf("curse.maven:industrial-reborn-358877:4076608")
    //implementation fg.deobf("curse.maven:ic2-classic-242942:4348706")
    implementation fg.deobf("curse.maven:bdlib-70496:4356501")
    implementation fg.deobf("curse.maven:factorium-583423:4362035")
}

jar {
    manifest {
        attributes([
                "Specification-Title": "JAOPCA",
                "Specification-Vendor": "thelm",
                "Specification-Version": "4",
                "Implementation-Title": "${archivesBaseName}",
                "Implementation-Version": "${version}",
                "Implementation-Vendor": "thelm",
                //"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ"),
                "MixinConnector": "thelm.jaopca.mixins.JAOPCAMixinConnector"
        ],)
    }
}

mixin {
    add sourceSets.main, "jaopca.refmap.json"
}
